apps/storage/templates/cube-backup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cube-backup
spec:
  selector:
    app: cube-backup
  ports:
  - name: "80"
    port: 80
