apps/storage/templates/rgw-staticsite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgw-static-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Root URL -> /index.html
      rewrite ^/$ /index.html break;
      # "/dir/" -> "/dir/index.html"
      rewrite ^(/.+)/$ $1/index.html break;
spec:
  tls:
    - hosts:
        - "static.~iac:rke2_catchall_hostname~"
      secretName: rgw-static-site-cert
  rules:
  - host: "static.~iac:rke2_catchall_hostname~"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-rgw-hasadna
            port:
              number: 80
